src/renderers/snapshots/moon_cram__renderers__pretty__tests__json_schema_failed_invalid_json.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ the location:10
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

JSON Schema validation failed: invalid JSON output

  - command output is not valid JSON: expected value

actual output:
  {"foo": "bar"}


Result: 1 document(s) with 1 testcase(s): 0 succeeded, 1 failed and 0 skipped
