src/renderers/snapshots/moon_cram__renderers__pretty__tests__json_schema_failed_validation_errors.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ the location:10
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

JSON Schema validation failed: schema validation errors

  - "other" is a required property
  - "foo" is not of type "integer"

actual output:
  {"foo": "bar"}


Result: 1 document(s) with 1 testcase(s): 0 succeeded, 1 failed and 0 skipped
