src/renderers/snapshots/moon_cram__renderers__pretty__tests__render_allows_for_utf8.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ the location:234
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command 🥳
// =============================================================================

unexpected exit code
  expected: 234
  actual:   123

## STDOUT
#> the stdout (no-eol)
## STDERR
#> the stderr (no-eol)


Result: 1 document(s) with 1 testcase(s): 0 succeeded, 1 failed and 0 skipped
