src/renderers/snapshots/moon_cram__renderers__pretty__tests__render_malformed_output.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ Line 234
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

1  1  |   matched
2     | - unmatched
   2  | + no match 1
   3  | + no match 2


Result: 0 document(s) with 1 testcase(s): 0 succeeded, 1 failed and 0 skipped
