src/renderers/snapshots/moon_cram__renderers__pretty__tests__test_render_multiline_match_excerpt=1.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ Line 10
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

     1  | + bar
 2+ ++  |   foo* (glob+)
    14  | + bar



