src/renderers/snapshots/moon_cram__renderers__pretty__tests__test_render_multiline_match_excerpt=12.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ Line 10
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

     1  | + bar
 2+  2  |   foo1   // foo* (glob+)
  +  3  |   foo2
  +  4  |   foo3
  +  5  |   foo4
  +  6  |   foo5
  +  7  |   foo6
  +  8  |   foo7
  +  9  |   foo8
  + 10  |   foo9
  + 11  |   foo10
  + 12  |   foo11
  + 13  |   foo12
    14  | + bar



