src/renderers/snapshots/moon_cram__renderers__pretty__tests__test_render_multiline_match_excerpt=3.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ Line 10
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

     1  | + bar
 2+  2  |   foo1   // foo* (glob+)
  +  3  |   foo2
  +     | … 
  + 13  |   foo12
    14  | + bar



